# zero-knowledge-poc

./: .dockerignore  .gitignore  Dockerfile  NOTES.md  NOTES.txt  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2a6411bd2710_better_cryptography.py  50f8c42254d9_sharing_model.py  5c3396d70201_add_email_column.py  6d10b2193f78_b64_encode_keys.py  6df6b9c1eb46_better_user_key_pairs.py  773d6ac381de_add_nonces.py  792c98a2edbd_add_private_col_to_groups.py  8e0bf8a511d4_poc.py  b2160fc5b54d_add_grouping_nonce.py  b3631510525c_add_keys.py  b3e0e6211624_group_name.py  bff06405ccb6_add_content_to_items.py  e6d231a89924_nullable_group_host.py
poc/: application.py  db.py  models.py
ui/: index.html
