[project]
name = "poc"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Elias Gabriel",email = "me@eliasfgabriel.com"},
]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.32",
    "fastapi-slim>=0.112.2",
    "jinja2>=3.1.4",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "asyncio-atexit>=1.0.1",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
]

[tool.pdm]
distribution = false

[tool.mypy]
strict = true

[tool.pyright]
ignore = [ "tests" ]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["B", "I", "ASYNC"]
